# applied-programming-paradigms--rust

./: Cargo.toml  README.md  index.html  interactive.html  package.json
pkg/: game_of_life.d.ts  game_of_life.js  game_of_life_bg.wasm  game_of_life_bg.wasm.d.ts
src/: lib.rs
