[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "console"
]